<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clLoginContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvWelcome"
        style="@style/title"
        android:text="@string/welcome"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/sub_title"
        android:autofillHints="emailAddress"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome" />

    <dev.gs.mytoolbox.ui.custom_views.ViewPassword
        android:id="@+id/viewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:background="@drawable/edit_text_views_border"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmailAddress" />

    <Button
        android:id="@+id/btnGoogleSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        style="@style/button_style"
        android:text="@string/sign_in_with_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewPassword" />

    <Button
        android:id="@+id/btnSignUp"
        style="@style/login_button"
        android:text="@string/sign_up"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btnSignIn"
        app:layout_constraintTop_toBottomOf="@id/btnGoogleSignIn" />

    <Button
        android:id="@+id/btnSignIn"
        style="@style/login_button"
        android:text="@string/sign_in"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btnSignUp"
        app:layout_constraintTop_toBottomOf="@id/btnGoogleSignIn" />

    <TextView
        android:id="@+id/tvDevelopedBy"
        android:text="@string/this_app_developed_by_g_s_dev"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/tvRightsStatus"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/login_reserved_rights_text" />

    <TextView
        android:id="@+id/tvRightsStatus"
        style="@style/login_reserved_rights_text"
        android:text="@string/all_rights_reserved_to_gal_shimron"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
