<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_tasks_title"
        style="@style/screen_title"
        android:text="@string/my_tasks"
        app:layout_constraintBottom_toTopOf="@id/btn_create_new_task"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_create_new_task"
        style="@style/button_style"
        android:text="@string/create_new_task"
        app:layout_constraintBottom_toTopOf="@id/btn_create_new_task"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_tasks_title" />

    <Button
        android:id="@+id/btn_tasks_list"
        style="@style/button_style"
        android:text="@string/tasks_list"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_create_new_task" />

</androidx.constraintlayout.widget.ConstraintLayout>